--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-streamlit
-numpy
+streamlit==1.30.0
+numpy==1.26.4
 scipy
 soundfile
 librosa
 scikit-learn
 joblib
 pyyaml
-torch
-torchaudio
-TTS
 faiss-cpu
-
+torch==2.1.2
+torchaudio==2.1.2
+coqui-tts-lite
