Fix Streamlit entrypoint, lock deps, add ffmpeg support

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-streamlit
-numpy
+streamlit==1.30.0
+
+numpy<2
 scipy
 soundfile
 librosa
-scikit-learn
-joblib
-pyyaml
-torch
-torchaudio
-TTS
-faiss-cpu
 
+torch==2.1.2
+torchaudio==2.1.2
 
+speechbrain==0.5.16
+transformers==4.36.2
+huggingface-hub==0.19.4
+
+TTS==0.22.0
+
+pydantic<2
